Allow main toolbar to be draggable over navbar and footer, update library window to be a flush grid (no gaps), fix library header 1px gap between library grid, ensure windows are horizontally centered, increase library window width

--- a/index.css
+++ b/index.css
@@ -13,10 +13,10 @@
   --radius-xl: 0.75rem;
   --radius-2xl: 1rem;
   --z-index-processing: 10;
-  --z-index-fab: 50;
   --z-index-footer: 50;
   --z-index-mobilebackdrop: 55;
   --z-index-navbar: 70;
+  --z-index-toolbar: 71;
   --z-index-sidebar: 80;
   --z-index-actionbar: 81;
   --z-index-window: 100;
